<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SunshineApp</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>


    <!-- - - - - - - - - - - - - - - -->
    <!-- Used by SunshineWeatherUtils-->
    <!-- - - - - - - - - - - - - - - -->

    <!-- Temperature format in Celsius [CHAR LIMIT=5] -->
    <string name="format_temperature_celsius">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0C
    </string>

    <!-- Temperature format in Fahrenheit [CHAR LIMIT=5] -->
    <string name="format_temperature_fahrenheit">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0F
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="Details">Details</string>

    <string name="noDatabczNoInternet">No Data because of no internet Connection</string>
    <string name="noData">No Data</string>
    <string name="share">Share</string>

    <string name="units_key">Units</string>
    <string name="units">Units</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="metric">metric</string>
    <string name="Imperial">Imperial</string>
    <string name="Notifications">Notifications</string>
    <string name="notifications_key">Notifications</string>
    <string name="pref_last_notification">last_notification</string>

    <string name="on">ENABLED</string>
    <string name="off">DISABLED</string>

    <string name="sultry">Sunny</string>
    <string name="temp1Sample"><xliff:g id="27">%1.0f</xliff:g>\u00B0C </string>
    <string name="wed">Wednesday</string>
    <string name="maxsample">31</string>
    <string name="time">Time</string>
    <string name="temp">26</string>
    <string name="value">30.09 inHg</string>
    <string name="title">Pressure</string>

    <string name="Albany">Albany, N.Y.</string>
    <string name="Albuquerque">Albuquerque, N.M.</string>
    <string name="Anchorage">Anchorage, Alaska</string>
    <string name="Asheville">Asheville, N.C.</string>
    <string name="Atlanta">Atlanta, Ga.</string>
    <string name="AtlanticCity">Atlantic City, N.J.</string>
    <string name="Austin">Austin, Texas</string>
    <string name="Baltimore">Baltimore, Md.</string>
    <string name="Baton">Baton Rouge, La.</string>
    <string name="Billings">Billings, Mont.</string>
    <string name="Birmingham">Birmingham, Ala.</string>
    <string name="Bismarck">Bismarck, N.D.</string>
    <string name="Boise">Boise, Idaho</string>
    <string name="Boston">Boston, Mass.</string>
    <string name="Bridgeport">Bridgeport, Conn.</string>
    <string name="Buffalo">Buffalo, N.Y.</string>
    <string name="Burlington">Burlington, Vt.</string>
    <string name="Caribou">Caribou, Maine</string>
    <string name="Casper">Casper, Wyo.</string>
    <string name="CharlestonSC">Charleston, S.C.</string>
    <string name="CharlestonWV">Charleston, W.Va.</string>
    <string name="Charlotte">Charlotte, N.C.</string>
    <string name="Cheyenne">Cheyenne, Wyo.</string>
    <string name="Chicago">Chicago, Ill.</string>
    <string name="Cleveland">Cleveland, Ohio</string>
    <string name="Columbia">Columbia, S.C.</string>
    <string name="Columbus">Columbus, Ohio</string>
    <string name="Concord">Concord, N.H.</string>
    <string name="DallasFtWorth">Dallas-Ft. Worth, Texas</string>
    <string name="Denver">Denver, Colo.</string>
    <string name="DesMoines">Des Moines, Iowa</string>
    <string name="Detroit">Detroit, Mich.</string>
    <string name="DodgeCity">Dodge City, Kan.</string>
    <string name="Duluth">Duluth, Minn.</string>
    <string name="ElPaso">El Paso, Texas</string>
    <string name="Fairbanks">Fairbanks, Alaska</string>
    <string name="Fargo">Fargo, N.D.</string>
    <string name="GrandJunction">Grand Junction, Colo.</string>
    <string name="GrandRapids">Grand Rapids, Mich.</string>
    <string name="Hartford">Hartford, Conn.</string>
    <string name="Helena">Helena, Mont.</string>
    <string name="Honolulu">Honolulu, Hawaii</string>
    <string name="Houston">Houston, Texas</string>
    <string name="Indianapolis">Indianapolis, Ind.</string>
    <string name="Jackson">Jackson, Miss.</string>
    <string name="Jacksonville">Jacksonville, Fla.</string>
    <string name="Juneau">Juneau, Alaska</string>
    <string name="KansasCity">Kansas City, Mo.</string>
    <string name="Knoxville">Knoxville, Tenn.</string>
    <string name="LasVegas">Las Vegas, Nev.</string>
    <string name="Lexington">Lexington, Ky.</string>
    <string name="LittleRock">Little Rock, Ark.</string>
    <string name="LongBeach">Long Beach, Calif.</string>
    <string name="LosAngeles">Los Angeles, Calif.</string>
    <string name="Louisville">Louisville, Ky.</string>
    <string name="Madison">Madison, Wisc.</string>
    <string name="Memphis">Memphis, Tenn.</string>
    <string name="Miami">Miami, Fla.</string>
    <string name="Milwaukee">Milwaukee, Wisc.</string>
    <string name="MinneapolisStPaul">Minneapolis</string>
    <string name="Mobile">Mobile, Ala.</string>
    <string name="Montgomery">Montgomery, Ala.</string>
    <string name="MtWashington">Mt. Washington, N.H.</string>
    <string name="Nashville">Nashville, Tenn.</string>
    <string name="Newark">Newark, N.J.</string>
    <string name="NewOrleans">New Orleans, La.</string>
    <string name="NewYork">New York, N.Y.</string>
    <string name="Norfolk">Norfolk, Va.</string>
    <string name="OklahomaCity">Oklahoma City, Okla.</string>
    <string name="Olympia">Olympia, Wash.</string>
    <string name="Omaha">Omaha, Neb.</string>
    <string name="Philadelphia">Philadelphia, Pa.</string>
    <string name="Phoenix">Phoenix, Ariz.</string>
    <string name="Pittsburgh">Pittsburgh, Pa.</string>
    <string name="PortlandMaine">Portland, Maine</string>
    <string name="PortlandOre">Portland, Ore.</string>
    <string name="Providence">Providence, R.I.</string>
    <string name="Raleigh">Raleigh, N.C.</string>
    <string name="Reno">Reno, Nev.</string>
    <string name="Richmond">Richmond, Va.</string>
    <string name="Roswell">Roswell, N.M.</string>
    <string name="Sacramento">Sacramento, Calif.</string>
    <string name="SaltLakeCity">Salt Lake City, Utah</string>
    <string name="SanAntonio">San Antonio, Texas</string>
    <string name="SanDiego">San Diego, Calif.</string>
    <string name="SanFrancisco">San Francisco, Calif.</string>
    <string name="Savannah">Savannah, Ga.</string>
    <string name="SeattleTacoma">Seattle-Tacoma, Wash.</string>
    <string name="SiouxFalls">Sioux Falls, S.D.</string>
    <string name="Spokane">Spokane, Wash.</string>
    <string name="Springfield">Springfield, Ill.</string>
    <string name="StLouis">St. Louis, Mo.</string>
    <string name="Tampa">Tampa, Fla.</string>
    <string name="Toledo">Toledo, Ohio</string>
    <string name="Tucson">Tucson, Ariz.</string>
    <string name="Tulsa">Tulsa, Okla.</string>
    <string name="VeroBeach">Vero Beach, Fla.</string>
    <string name="Washington">Washington, D.C.</string>
    <string name="Wichita">Wichita, Kan.</string>
    <string name="Wilmington">Wilmington, Del.</string>
    <string name="location_key">Location</string>
    <string name="location_title">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for Notifications and Toasts -->
    <string name="water_chug_toast">GLUG GLUG GLUG</string>

    <string name="charging_reminder_notification_title">Weather data update</string>
    <string name="charging_reminder_notification_body">Updating weather data</string>

    <string name="main_notification_channel_name">Primary</string>
    <string name="channel_description">Primary channel</string>
    <string name="didit">I did it!</string>
    <string name="ignore">No,thanks!</string>


</resources>
