<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Albany"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="@dimen/margin3"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/sultry"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        android:layout_marginBottom="@dimen/margin2"/>

    <TextView
        android:id="@+id/temp1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="top|center_horizontal"
        android:text="@string/temp1Sample"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc"
        android:layout_marginBottom="@dimen/margin2"
        />

    <TextView
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:autoSizeTextType="uniform"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/wed"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="@dimen/textSizePref"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp1"
        app:layout_constraintWidth_percent="0.3" />


    <TextView
        android:id="@+id/max"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="top|center_horizontal"
        app:layout_constraintWidth_percent="0.1"
        android:text="@string/maxsample"
        android:textSize="@dimen/textSizePref"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintHeight_percent="0.1"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/temp1"
        app:layout_constraintRight_toLeftOf="@+id/min"/>

    <TextView
        android:id="@+id/min"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:autoSizeTextType="uniform"
        android:gravity="top|center_horizontal"
        android:text="@string/maxsample"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="@dimen/textSizePref"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@+id/max"
        app:layout_constraintTop_toBottomOf="@+id/temp1"
        app:layout_constraintWidth_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>
